--- a/OneDrive/Desktop/netflix/style.css
+++ b/OneDrive/Desktop/netflix/style.css
@@ -17,6 +17,7 @@ body
     display: flex;
     flex-direction:column;
     align-items: center;
+
 }
 h1{
     color:white;
@@ -24,14 +25,23 @@ h1{
 .section_images
 {
     display: flex;
+    
      
 }
 .person{
     width: 200px;
     height:400px;
+    padding:5px;
+     
 }
 h2{
     color:white;
     text-align:center;
+
+}
+.button{
+    background-color: red;
+    color :white;
+    font-size: large;
 }
   
